# Agent-Surgeon

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  example.py  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
src/surgeon/: __init__.py  hooks.py  insights.py  storage.py  tracer.py  viewer.py  web.py
